--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
     <div class="main-container">
         <h1>Dirty After Work</h1>
         <p>A Website.</p>
-    </div>
+        
+        <nav class="main-nav">
+            <a href="images.html">Images</a>
+            <a href="music.html">Songs</a>
+            <a href="lyrics.html">Lyrics</a>
+            <a href="about.html">About</a>
+        </nav>
+        </div>
 
 </body>
 </html>
