nav bar and period

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="main-container">
-        <h1>Dirty After Work</h1>
+        <h1>Dirty After Work.</h1>
         <p>A Website.</p>
         
         <nav class="main-nav">
