--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>A Website.</p>
         
         <nav class="main-nav">
-            <a href="images.html">Images</a>
+            <a href="pictures.html">Pictures</a>
             <a href="music.html">Songs</a>
             <a href="lyrics.html">Lyrics</a>
             <a href="about.html">About</a>
