--- a/pictures.html
+++ b/pictures.html
@@ -156,17 +156,16 @@
             <!-- Removed: <p>A selection of photos and art related to the project.</p> -->
 
             <div class="image-grid">
-                <!-- Placeholder Images: Replace these with your actual files (e.g., images/photo1.jpg) -->
                 <div class="image-card">
-                    <img src="https://placehold.co/600x400/333333/FFFFFF?text=Photo+1" alt="Studio Session">
+                    <img src="Sticker.jpg" alt="Sticker">
                     <div class="image-caption">Placeholder.</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://placehold.co/600x400/555555/FFFFFF?text=Photo+2" alt="Live Performance">
+                    <img src="Plattsburgh.jpg" alt="Live Performance">
                     <div class="image-caption">Placeholder.</div>
                 </div>
                 <div class="image-card">
-                    <img src="https://placehold.co/600x400/777777/FFFFFF?text=Photo+3" alt="Album Art Concept">
+                    <img src="IMOnABoat.jpg" alt="Album Art Concept">
                     <div class="image-caption">Placeholder.</div>
                 </div>
             </div>
@@ -205,3 +204,4 @@
 
 </body>
 </html>
+
