--- a/pictures.html
+++ b/pictures.html
@@ -157,15 +157,15 @@
 
             <div class="image-grid">
                 <div class="image-card">
-                    <img src="Sticker.jpg" alt="Sticker">
+                    <img src="TheFourth.jpg" alt="The Fourth">
                     <div class="image-caption">Placeholder.</div>
                 </div>
                 <div class="image-card">
-                    <img src="Plattsburgh.jpg" alt="Live Performance">
+                    <img src="Plattsburgh.jpg" alt="Plattsburgh">
                     <div class="image-caption">Placeholder.</div>
                 </div>
                 <div class="image-card">
-                    <img src="IMOnABoat.jpg" alt="Album Art Concept">
+                    <img src="IMOnABoat.jpg" alt="Ferry to Plattsburgh">
                     <div class="image-caption">Placeholder.</div>
                 </div>
             </div>
@@ -204,4 +204,5 @@
 
 </body>
 </html>
+
 
