--- a/pictures.html
+++ b/pictures.html
@@ -155,18 +155,19 @@
             <!-- Removed: <h2>The Visuals</h2> -->
             <!-- Removed: <p>A selection of photos and art related to the project.</p> -->
 
-            <div class="image-grid">
+ 
                 <div class="image-card">
-                    <img src="TheFourth.jpg" alt="The Fourth">
-                    <div class="image-caption">Placeholder.</div>
+                    <img src="Plattsburgh.jpg" alt="Finding the Plattsburgh Sound">
+                    <div class="image-caption">Finding the Plattsburgh Sound.</div>
+                </div>
+                       <div class="image-grid">
+                <div class="image-card">
+                    <img src="TheFourth.jpg" alt="Fun Hats">
+                    <div class="image-caption">Fun Hats.</div>
                 </div>
                 <div class="image-card">
-                    <img src="Plattsburgh.jpg" alt="Plattsburgh">
-                    <div class="image-caption">Placeholder.</div>
-                </div>
-                <div class="image-card">
-                    <img src="IMOnABoat.jpg" alt="Ferry to Plattsburgh">
-                    <div class="image-caption">Placeholder.</div>
+                    <img src="IMOnABoat.jpg" alt="Dirty on a Boat">
+                    <div class="image-caption">Dirty on a Boat.</div>
                 </div>
             </div>
         </div>
@@ -204,5 +205,6 @@
 
 </body>
 </html>
+
 
 
