--- a/pictures.html
+++ b/pictures.html
@@ -160,17 +160,17 @@
                        <div class="image-grid">
 
   <div class="image-card">
-                    <img src="Plattsburgh.jpg" alt="Finding the Plattsburgh Sound">
-                    <div class="image-caption">Finding the Plattsburgh Sound.</div>
+                    <img src="Plattsburgh.jpg" alt="Finding the Plattsburgh sound">
+                    <div class="image-caption">Finding the Plattsburgh sound.</div>
                 </div>
                            
                 <div class="image-card">
-                    <img src="TheFourth.jpg" alt="Fun Hats">
-                    <div class="image-caption">Fun Hats.</div>
+                    <img src="TheFourth.jpg" alt="Fun hats">
+                    <div class="image-caption">Fun hats.</div>
                 </div>
                 <div class="image-card">
-                    <img src="IMOnABoat.jpg" alt="Dirty on a Boat">
-                    <div class="image-caption">Dirty on a Boat.</div>
+                    <img src="IMOnABoat.jpg" alt="Dirty on a boat">
+                    <div class="image-caption">Dirty on a boat.</div>
                 </div>
             </div>
         </div>
@@ -208,6 +208,7 @@
 
 </body>
 </html>
+
 
 
 
