--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         <nav class="main-nav">
             <a href="pictures.html">Pictures</a>
-            <a href="music.html">Songs</a>
+            <a href="songs.html">Songs</a>
             <a href="lyrics.html">Lyrics</a>
             <a href="about.html">About</a>
         </nav>
