--- a/songs.html
+++ b/songs.html
@@ -231,7 +231,7 @@
                 
                 <!-- SONG CARD 4: ADDED MISSING ANCHOR TAG FOR LAST CARD -->
                 <div class="song-card">
-                    <h2>Beds Are Burning</h2>
+                    <h2>Beds Are Burning (Midnight Oil cover)</h2>
                     <p>Placeholder.</p>
                     
                     <audio controls class="single-audio-player">
@@ -293,3 +293,4 @@
 
 </body>
 </html>
+
