--- a/songs.html
+++ b/songs.html
@@ -32,9 +32,32 @@
             justify-content: flex-start; 
             align-items: center;
             width: 100%;
-            position: relative;
+            position: relative; /* Changed from fixed, see note below */
             padding: 0 20px;
         }
+
+        /* NEW: We need to style the main container to account for the header height. 
+           We're going to make the header fixed again, but apply padding to the body.
+        */
+        
+        /* Re-apply fixed header and add padding to main-container */
+        .page-header {
+            position: fixed; /* Make header fixed so it stays when scrolling */
+            top: 0;
+            left: 0;
+            background: white; /* Ensure header content is always visible */
+            box-shadow: 0 2px 4px rgba(0,0,0,0.05); /* Subtle shadow */
+            z-index: 999;
+        }
+
+        /* NEW STYLE: Padding for the entire body content to push it below the fixed header */
+        .main-container {
+            /* Adjust padding based on the header's height (approx 80px) */
+            padding-top: 80px;
+            /* Existing styles: */
+            min-height: 100vh;
+        }
+
 
         /* --- Global Off-Canvas Navigation Styles (Hamburger Menu) --- */
         
@@ -293,4 +316,3 @@
 
 </body>
 </html>
-
