--- a/pictures.html
+++ b/pictures.html
@@ -182,7 +182,7 @@
         <!-- Main Navigation Overlay -->
         <nav class="main-nav" id="main-menu">
             <a href="index.html">Home</a>
-            <a href="music.html">Songs</a>
+            <a href="songs.html">Songs</a>
             <a href="lyrics.html">Lyrics</a>
             <a href="about.html">About</a>
         </nav>
@@ -262,3 +262,4 @@
 
 </body>
 </html>
+
