--- a/songs.html
+++ b/songs.html
@@ -53,7 +53,7 @@
         /* NEW STYLE: Padding for the entire body content to push it below the fixed header */
         .main-container {
             /* Adjust padding based on the header's height (approx 80px) */
-            padding-top: 100px;
+            padding-top: 200px;
             /* Existing styles: */
             min-height: 100vh;
         }
@@ -202,7 +202,7 @@
         <!-- Main Navigation Overlay -->
         <nav class="main-nav" id="main-menu">
             <a href="index.html">Home</a>
-            <a href="images.html">Pictures</a>
+            <a href="pictures.html">Pictures</a>
             <a href="lyrics.html">Lyrics</a>
             <a href="about.html">About</a>
         </nav>
@@ -316,4 +316,5 @@
 
 </body>
 </html>
+
 
