--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
         <nav class="main-nav" id="main-menu">
             <a href="index.html">Home</a>
+            <a href="pictures.html">Pictures</a>
             <a href="songs.html">Songs</a>
             <a href="lyrics.html">Lyrics</a>
             <a href="about.html">About</a>
