--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="shared.css">
 
 <style>
-    /* Override page-header to keep it available for nav functionality but out of sight */
+    /* This special rule ONLY applies to the homepage header */
     .page-header {
-        position: absolute;
+        position: absolute; /* This takes it out of the flow */
         top: 20px;
         left: 20px;
     }
